feat: add Watchtower service for automatic OpenWebUI updates
Add Watchtower container to automatically monitor and update OpenWebUI:
- Configures Watchtower to check for updates every 5 minutes (300 seconds)
- Monitors only the open-webui container for targeted updates
- Includes proper dependencies and network configuration
- Enables seamless automatic updates without manual intervention

--- a/compose.yaml
+++ b/compose.yaml
@@ -34,6 +34,18 @@ services:
     networks:
       - webui-network
 
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --interval 300 open-webui
+    networks:
+      - webui-network
+    depends_on:
+      - open-webui
+
 networks:
   webui-network:
     driver: bridge
