fix: rename DOMAIN to DOMAIN_NAME in .env.example
Align environment variable name with Caddy configuration reference.

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ WEBUI_SECRET=
 WEBUI_URL=
 
 # The domain name for Cadd config
-DOMAIN=
+DOMAIN_NAME=
 
 # Paths to certificate and key for Caddy tls
 TLS_CERT_PATH=
