--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ ZAI_API_KEY=
 
 # Generate a long, random, secret string for session security
 # You can use a command like: openssl rand -base64 32
-WEBUI_SECRET=
+WEBUI_SECRET_KEY=
 
 # The fully qualified URL of where you are hosting
 WEBUI_URL=
