--- a/compose.yaml
+++ b/compose.yaml
@@ -28,7 +28,7 @@ services:
     environment:
       - OPENAI_API_BASE_URL=https://api.z.ai/api/coding/paas/v4
       - OPENAI_API_KEY=${ZAI_API_KEY}
-      - WEBUI_SECRET=${WEBUI_SECRET}
+      - WEBUI_SECRET_KEY=${WEBUI_SECRET_KEY}
       - CORS_ALLOW_ORIGIN=https://nonexistent.domain.invalid
     volumes:
       - open-webui:/app/backend/data
