fix: update Caddyfile to use DOMAIN_NAME variable
Update Caddyfile configuration to use the renamed DOMAIN_NAME variable
instead of DOMAIN for consistency with .env.example changes.

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-{$DOMAIN:localhost} {
+{$DOMAIN_NAME:localhost} {
     tls /etc/ssl/certs/certificate.pem /etc/ssl/certs/key.pem
 
     header {
@@ -17,6 +17,6 @@
     }
 }
 
-http://{$DOMAIN:localhost} {
+http://{$DOMAIN_NAME:localhost} {
     redir https://{host}{uri}
 }
