--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ WEBUI_SECRET_KEY=
 # The fully qualified URL of where you are hosting
 WEBUI_URL=
 
-# The domain name for Cadd config
+# The domain name for Caddy config
 DOMAIN_NAME=
 
 # Paths to certificate and key for Caddy tls
